location matching algorithm for nested directories

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -11,16 +11,41 @@ http
 		index index.html;
 		error_page 400=errors/400.html 404=errors/404.html;
 
-		cgi_path cgi-bin/;
-		cgi_ext .py;
-		cgi_exec /usr/bin/python3;
-
 		location /
 		{
 			root wwwroot/;
 			autoindex on; #turn on directory listing
 			allowed_methods POST GET;
 			index index.html;
+		}
+
+		location /dir/
+		{
+			root wwwroot/database/;
+			autoindex on;
+		}
+
+		location /dirdir/
+		{
+			root wwwroot/database/dir/;
+			autoindex on;
+		}
+
+		location /dirdirdir/
+		{
+			root wwwroot/database/dir/dirdir/;
+			autoindex on;
+		}
+
+		location /images/
+		{
+			root wwwroot/database/;
+		}
+
+		location /cgi_bin/
+		{
+			cgi_ext .py;
+			cgi_path /usr/bin/python3;
 		}
 	}
 
