--- a/configs/default.conf
+++ b/configs/default.conf
@@ -1,5 +1,5 @@
 http
-{ #test skipping standalone open brace
+{
 	server
 	{
 		listen 8080;
@@ -23,6 +23,13 @@ http
 		{
 			root wwwroot/database/;
 			autoindex on;
+		}
+
+		location /dir/dirdir/
+		{
+			root wwwroot/database/;
+			autoindex off;
+			index inside.html;
 		}
 
 		location /dirdir/
