case insensitive location match (test with curl)

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -25,7 +25,7 @@ http
 			autoindex on;
 		}
 
-		location /dir/dirdir/
+		location ~* /dir/dirdir/
 		{
 			root wwwroot/database/;
 			autoindex off;
