--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -49,7 +49,7 @@ http
 			redirect database/;
 		}
 
-		location /cgi_bin/
+		location /cgi-bin/
 		{
 			cgi_ext .py;
 			cgi_path /usr/bin/python3;
