added virtual destructor to CGIHandler, cleaned Response.cpp

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -29,7 +29,7 @@ http
 		{
 			root wwwroot/database/;
 			autoindex off;
-			index inside.html;
+			#index inside.html;
 		}
 
 		location /dirdir/
