updated default config

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -71,7 +71,7 @@ http
 		location /
 		{
 			autoindex on; #turn on directory listing
-			allowed_methods POST GET;
+			#allowed_methods POST GET;
 			index index.html;
 		}
 	}
