--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -75,4 +75,11 @@ http
 			index index.html;
 		}
 	}
+
+	server
+	{
+		listen 8080;
+		host 127.0.0.1;
+		#server_name example.com www.example.com;
+	}
 }
