wip: testing php form

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -51,8 +51,8 @@ http
 
 		location /cgi-bin/
 		{
-			cgi_ext .py;
-			cgi_exec /usr/bin/python3;
+			cgi_ext .py .php;
+			cgi_exec /usr/bin/python3 /usr/bin/php;
 		}
 	}
 
