enable delete method in default config

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -19,6 +19,18 @@ http
 			index index.html;
 		}
 
+		location /images/
+        {
+            root wwwroot/database/;
+            autoindex on;
+            allowed_methods DELETE;
+        }
+
+        location /pics/
+		{
+			redirect database/images/;
+		}
+
 		location /dir/
 		{
 			root wwwroot/database/;
@@ -42,11 +54,6 @@ http
 		{
 			root wwwroot/database/dir/dirdir/;
 			autoindex on;
-		}
-
-		location /images/
-		{
-			redirect database/;
 		}
 
 		location /cgi-bin/
