--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -52,7 +52,7 @@ http
 		location /cgi-bin/
 		{
 			cgi_ext .py .php;
-			cgi_exec /usr/bin/python3 /usr/bin/php;
+			cgi_exec /usr/bin/python3 /usr/bin/php-cgi;
 		}
 	}
 
