--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -14,9 +14,16 @@ http
 		location /
 		{
 			root wwwroot/;
-			autoindex on; #turn on directory listing
+			autoindex on;
 			allowed_methods POST GET;
 			index index.html;
+		}
+
+		location /uploads/
+		{
+			root ./;
+			autoindex on;
+			allowed_methods GET POST DELETE;
 		}
 
 		location /images/
@@ -87,12 +94,5 @@ http
 			cgi_ext .py .php;
 			cgi_exec /usr/bin/python3 /usr/bin/php-cgi;
 		}
-	}
-
-	server
-	{
-		listen 8080;
-		host 127.0.0.1;
-		#server_name example.com www.example.com;
 	}
 }
