--- a/config_files/duplicate_port.conf
+++ b/config_files/duplicate_port.conf
@@ -14,9 +14,16 @@ http
 		location /
 		{
 			root wwwroot/;
-			autoindex on; #turn on directory listing
+			autoindex on;
 			allowed_methods POST GET;
 			index index.html;
+		}
+
+		location /uploads/
+		{
+			root ./;
+			autoindex on;
+			allowed_methods GET POST DELETE;
 		}
 
 		location /images/
